# TIA-PRE-PROCESSING-SERVICE

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  docker_build_run.sh  dummp.json  generate_docs.sh  logs.txt  register_db_connector.sh  requirements.sh  setup.sh  view_docs.sh
.github/workflows/: c-cpp.yml  main.yml
app/: .dockerignore  CMakeLists.txt  Dockerfile  Makefile
app/include/: database.hpp  kafka_client.hpp  memgraph_client.hpp  message_handler.hpp  models.hpp
app/src/: database.cpp  kafka_client.cpp  main.cpp  memgraph_client.cpp  message_handler.cpp
app/test/: tests.cpp
db/: tia_db_dump.sql
docs/: conf.py  index.rst
docs/doxygen/: Doxyfile
docs/doxygen/html/: dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.dot  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_source.html  main_8h.html  main_8h_source.html  main__test_8cpp.html  main__test_8cpp.js  main__test_8cpp__incl.dot  main__test_8cpp__incl.map  main__test_8cpp__incl.md5  main__test_8cpp_source.html  navtreedata.js  navtreeindex0.js
docs/doxygen/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
docs/doxygen/latex/: dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  main_8cpp.tex  main_8cpp.tex.tmp  main_8cpp__incl.dot  main_8cpp__incl.md5  main_8cpp_source.tex  main_8h.tex  main__test_8cpp.tex  main__test_8cpp__incl.dot  main__test_8cpp__incl.md5  main__test_8cpp_source.tex  refman.tex
docs/source/: conf.py
html/: dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.md5  main__test_8cpp.html  main__test_8cpp__incl.map  main__test_8cpp__incl.md5
html/search/: all_0.js  files_0.js  functions_0.js  functions_2.js  functions_3.js
latex/: dir_13e138d54eb8818da29c3992edef070a.tex  files.tex  main_8cpp.tex  main_8cpp__incl.md5  main__test_8cpp.tex  main__test_8cpp__incl.md5
src/: main.cpp
test/: main_test.cpp
